A problem with help menu on small screes was solved (the menu do not cover all the window on small sizes)

--- a/client/css/index.css
+++ b/client/css/index.css
@@ -409,6 +409,8 @@ button {
         right: 0;
         bottom: 0;
         left: 0 !important;
+        max-width: unset;
+	    width: unset;
         border-radius: 0;
     }
     
